--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand waves-effect waves-dark" href="index.html"><i class="large material-icons">track_changes</i> <strong>target</strong></a>
+                <a class="navbar-brand waves-effect waves-dark" href="index.html"> <strong>Ticket Buddy</strong></a>
 
                 <div id="sideNav" href=""><i class="material-icons dp48">toc</i></div>
             </div>
@@ -111,28 +111,90 @@
 
             <div id="page-inner">
                 <!--Form -->
-                <!-- Rotating card -->
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                <div class="form">
+                    <ul class="tab-group">
+                        <li class="tab active"><a href="#login">Log In</a></li>
+                        <li class="tab"><a href="#signup">Sign Up</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <div id="login">
+                            <form action="/" method="post">
+
+                                <div class="field-wrap">
+                                    <label>
+                            Email Address<span class="req">*</span>
+                          </label>
+                                    <input type="email" required autocomplete="off" />
+                                </div>
+
+                                <div class="field-wrap">
+                                    <label>
+                            Password<span class="req">*</span>
+                          </label>
+                                    <input type="password" required autocomplete="off" />
+                                </div>
+
+                                <p class="forgot"><a href="#">Forgot Password?</a></p>
+
+                                <button class="button button-block" />Log In</button>
+
+                            </form>
+
                         </div>
-                        <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect & Engineer</p>
-                            <p>We love that guy</p>
+                        <div id="signup">
+                            <form action="/" method="post">
+                                <div class="top-row">
+                                    <div class="field-wrap">
+                                        <label>
+                              First Name<span class="req">*</span>
+                            </label>
+                                        <input type="text" required autocomplete="off" />
+                                    </div>
+
+                                    <div class="field-wrap">
+                                        <label>
+                              Last Name<span class="req">*</span>
+                            </label>
+                                        <input type="text" required autocomplete="off" />
+                                    </div>
+                                </div>
+
+                                <div class="field-wrap">
+                                    <label>
+                            Email Address<span class="req">*</span>
+                          </label>
+                                    <input type="email" required autocomplete="off" />
+                                </div>
+
+                                <div class="field-wrap">
+                                    <label>
+                            Set A Password<span class="req">*</span>
+                          </label>
+                                    <input type="password" required autocomplete="off" />
+                                </div>
+
+                                <button type="submit" class="button button-block" />Get Started</button>
+
+                            </form>
+
                         </div>
                     </div>
-                </div>
+                    <!-- tab-content -->
 
-                <!-- Rotating card -->
+                </div>
+                <!-- /form -->
+
             </div>
             <!-- /. PAGE INNER  -->
         </div>
         <!-- /. PAGE WRAPPER  -->
     </div>
     <!-- /. WRAPPER  -->
+
+
+
     <!-- JS Scripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- jQuery Js -->
     <script src="assets/js/form.js"></script>
     <script src="assets/js/jquery-1.10.2.js"></script>
